<resources>
    <string name="app_name">ClimbTheMountain</string>
    <string name="username">

        Nome Utente

    </string>
    <string name="password_low">password</string>
    <string name="log_button">LOGIN</string>
    <string name="new_user">
        <u>
        Registrati
        </u>
    </string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="password_Up">Password</string>
    <string name="repeat_pass">Ripeti Password</string>
    <string name="session_start">Inizio Sessione</string>
    <string name="week_hours">Ore Studio Settimanali</string>
    <string name="exams">Esami</string>
    <string name="exams_name">Nome Esame</string>
    <string name="cfu">CFU</string>
    <string name="exam_dead">Data Esame</string>
    <string name="exam_color">Colore Esame</string>
    <string name="name_display"> Nome :</string>
    <string name="surname_display">Cognome :</string>
    <string name="username_display">Username :</string>
    <string name="session_display">Inizio Sessione : </string>
    <string name="hours_display">Ore settimanali di studio :</string>
    <string name="delete">Elimina</string>
    <string name="tvAddExams">Esame</string>
    <string name="tvListSum">Lista  Esami:</string>
    <string name="colorPickerDialog">Seleziona un colore:</string>
    <string name="labelcfuExamList">CFU:</string>
    <string name="labelDateExamList">Data:</string>


    // buttons' name
    <string name="bt_act_done">Completato</string>
    <string name="bt_mod">Modifica</string>
    <string name="bt_add_hours">Aggiungi ore studio settimanali</string>
    <string name="bt_add_exam">Aggiungi Esame</string>
    <string name="bt_pck_color">Seleziona Colore</string>
    <string name="bt_cancel">Annulla</string>

    // activity's name
    <string name="activity_register">Registrazione</string>
    <string name="activity_session">Personalizzazione Sessione</string>
    <string name="activity_exams">Personalizzazione Esame</string>
    <string name="activity_summary">Sommario</string>
    <string name="activity_login">Login</string>
    <string name="activity_custom_calendar">Ore Selezionate</string>

    // hints string
    <string name="hint_error_name">Inserisci il tuo nome qui!</string>
    <string name="hint_error_surname">Inserisci il tuo cognome qui!</string>
    <string name="hint_error_username">Inserisci il tuo cognome qui!</string>
    <string name="hint_error_password">Inserisci una password!</string>
    <string name="hint_error_password_rep">Le password devono corrispondere!</string>
    <string name="hint_error_password_rep_match">Ripeti la tua password qui!</string>

    <string name="hint_general_name">Inserisci il tuo nome</string>
    <string name="hint_general_surname">Inserisci il tuo cognome</string>
    <string name="hint_general_username">Inserisci un username</string>
    <string name="hint_general_password">Inserisci una password</string>
    <string name="hint_general_password_rep">Ripeti la password</string>

    <string name="error_insert_hours">Imposta il tuo piano delle ore settimanali!</string>
    <string name="error_insert_exams">Aggiungi almeno un esame!</string>

    <string name="hint_general_exam_name">Aggiungi un nome per il tuo esame</string>
    <string name="hint_general_exam_cfu">Aggiungi i CFU correlati</string>

    <string name="hint_error_examCfu_noChar">Inserisci un numero valido!</string>
    <string name="hint_error_examName_noName">Inserisci un nome per l\'esame!!</string>
    <string name="hint_error_examCfu_noCfu">Inserisci un numero di CFU!</string>

    <string name="text_error_color">Scegli un colore per l\'esame!</string>


    // customCalendar

    <!--<string name="eightOClock">8:00am</string>-->
    <!--<string name="nineOClock">9:00am</string>-->
    <!--<string name="tenOClock">10:00am</string>-->
    <!--<string name="elevenOClock">11:00am</string>-->
    <!--<string name="twelveOClock">12:00am</string>-->
    <!--<string name="thirteenOClock">1:00pm</string>-->
    <!--<string name="fourteenOClock">2:00pm</string>-->
    <!--<string name="fifteenOClock">3:00pm</string>-->
    <!--<string name="sixteenOClock">4:00pm</string>-->
    <!--<string name="seventeenOClock">5:00pm</string>-->
    <!--<string name="eighteenOClock">6:00pm</string>-->
    <!--<string name="nineteenOClock">7:00pm</string>-->
    <!--<string name="twentyOClock">8:00pm</string>-->
    <!--<string name="twentyOneOClock">9:00pm</string>-->
    <!--<string name="twentyTwoOClock">10:00pm</string>-->
    <!--<string name="twentyThreeOClock">11:00pm</string>-->

    <string name="eightOClock">8:00</string>
    <string name="nineOClock">9:00</string>
    <string name="tenOClock">10:00</string>
    <string name="elevenOClock">11:00</string>
    <string name="twelveOClock">12:00</string>
    <string name="thirteenOClock">13:00</string>
    <string name="fourteenOClock">14:00</string>
    <string name="fifteenOClock">15:00</string>
    <string name="sixteenOClock">16:00</string>
    <string name="seventeenOClock">17:00</string>
    <string name="eighteenOClock">18:00</string>
    <string name="nineteenOClock">19:00</string>
    <string name="twentyOClock">20:00</string>
    <string name="twentyOneOClock">21:00</string>
    <string name="twentyTwoOClock">22:00</string>
    <string name="twentyThreeOClock">23:00</string>


    <string name="tv_monday">Lunedì</string>
    <string name="tv_tuesday">Martedì</string>
    <string name="tv_wednesday">Mercoledì</string>
    <string name="tv_thursday">Giovedì</string>
    <string name="tv_friday">Venerdì</string>
    <string name="tv_saturday">Sabato</string>
    <string name="tv_sunday">Domenica</string>

    <string name="labelColor_ExamListView">Colore :</string>
    <string name="mod_button_lsit_exams">Lista Esami</string>
    <string name="mod_button_add_exam">Aggiungi Esame</string>


    <string name="tutorial_dialogFragment_title_textView">Tutorial:</string>
    <string name="tutorial_dialogFragment_textView">
        Nella seguente sezione devi selezionare le singole ore che hai a disposizione per studiare.
        Usa le frecce per cambiare giorno della settimana.
        Come hai terminato premi il tasto conferma e continua con la registrazione dell\'account.
    </string>
</resources>
