<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_space3_Mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvSessionExam_examName_Mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/exams_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etSessionExam_examName_Mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />


            <TextView
                android:id="@+id/tvSessionExam_cfu_Mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/cfu"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etSessionExam_cfu_Mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvSessionExam_deadline_Mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/exam_dead"
                android:textSize="16sp" />

            <!--Ok... rendering problem seems to be caused by this DataPicker-->

            <DatePicker
                android:id="@+id/dpSessionExam_deadline_Mod"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true">

            </DatePicker>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/tvSessionExam_color_Mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/exam_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSessionExam_errorColor_Mod"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/tvSessionExam_color_Mod"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:text="@string/text_error_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSessionExam_colorSquare_Mod"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_toRightOf="@id/tvSessionExam_color_Mod"
                    />

            </RelativeLayout>


            <!-- color-pick button -->
            <Button
                android:id="@+id/btSessionExam_colorPck_Mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/bt_pck_color"/>


            <!--I've provided two options, one to cancel and ignore changes and one
                to delete the subject. Be aware! this should be allowed only once the
                data has been inserted ;) -->

            <Button
                android:id="@+id/btCancel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:paddingTop="15dp"
                android:text="@string/bt_cancel" />

            <Button
                android:id="@+id/btDelete"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:paddingTop="15dp"
                android:text="@string/delete"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>