<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbSessionExam_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="20dp" />


        <TextView
            android:id="@+id/tvSessionExam_examName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exams_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etSessionExam_examName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />


        <TextView
            android:id="@+id/tvSessionExam_cfu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cfu"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etSessionExam_cfu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvSessionExam_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exam_dead"
            android:textSize="16sp" />

        <DatePicker
            android:id="@+id/dpSessionExam_deadline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true">

        </DatePicker>

        <TextView
            android:id="@+id/tvSessionExam_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exam_color"
            android:textSize="16sp" />

        <!-- color-pick button -->


    </LinearLayout>

</ScrollView>